--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,13 +18,9 @@ jobs:
         with:
           python-version: '3.8'
 
-      - name: Install cibuildwheel
-        run: |
-          python -m pip install cibuildwheel==1.6.4
-
       - name: Build wheels
         run: |
-          python -m cibuildwheel --output-dir wheelhouse
+          pip wheel . -w ./wheelhouse
 
       - uses: actions/upload-artifact@v2
         with:
