--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-18.04, windows-latest, macos-latest]
+        python: ['3.8', '3.9']
 
     steps:
       - uses: actions/checkout@v2
@@ -16,7 +17,7 @@ jobs:
       - uses: actions/setup-python@v2
         name: Install Python
         with:
-          python-version: '3.8'
+          python-version: ${{ matrix.python }}
     
       - name: Install requirements
         run: |
